@@ -25,7 +25,7 @@ dependencies {
 
     // AWS S3
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:4.0.0'
-
+//
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     
     // QueryDSL
@@ -64,4 +64,5 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
